# vue_aplicacion_expenses

./: docker-compose.yml  package.json  tailwind.config.js
backend/: .env  .gitignore  Dockerfile  README.md  expenses.db  pasos_docker_deploy.txt  pyproject.toml  tasks.db  test.db
backend/app/: crud.py  database.py  main.py  models.py  security.py  seed.py  seed.sql
backend/app/controllers/: __init__.py  category_controller.py  crud.py  expense_controller.py  income_controller.py  shared_expense_controller.py  user_controller.py  wallet_controller.py
backend/app/models/: __init__.py  category.py  expense.py  income.py  shared_expense.py  user.py  wallet.py
backend/app/routes/: auth.py  auth_routes.py  categories.py  category.py  category_routes.py  expense.py  expense_routes.py  expenses.py  income_routes.py  shared_expense_routes.py  wallet_routes.py
backend/app/tests/: conftest.py  test_auth.py  test_categories.py  test_expenses.py  test_incomes.py
backend/fastapi_tasks/: crud.py  main.py  models.py  pyproject.toml
backend/templates/: index.html
document/: documentacion.eapx  documentacion.ldb
frontend/: .firebaserc  Dockerfile  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/public/: index.html
frontend/public/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: ConfirmDialog.vue  ExpenseForm.vue  ExpenseList.vue  Loading.vue  NavBar.vue  TaskUploader.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  apiConfig.js  authService.js  firebase.js
frontend/src/stores/: authStore.js  categoryStore.js
frontend/src/views/: Dashboard.vue  Home.vue  (+3 more)
src/: main.js
src/components/: TodoList.vue
src/views/: Home.vue
