[tool.poetry]
name = "fastapi-tasks"
version = "0.1.0"
description = "Proyecto FastAPI con CRUD de tareas"
authors = ["Tu Nombre <tu@correo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
sqlalchemy = "^1.4.0"
python-multipart = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
