[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "jonathan correa",email = "jonathancorrea291292@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
