[tool.poetry]
name = "app"
version = "0.1.0"
description = "Backend API for expenses management application built with FastAPI"
authors = ["jonathan correa <jonathancorrea291192@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.5"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
sqlalchemy = ">=2.0.38,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
pyjwt = ">=2.10.1,<3.0.0"
bcrypt = "3.2.0"
python-dotenv = ">=1.0.0,<2.0.0"
python-multipart = ">=0.0.6,<0.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
